<resources>
    <string name="app_name">SIGBE</string>
    <string name="name">Nombre</string>
    <string name="text2">Email</string>
    <string name="text3">Contraseña</string>
    <string name="descripImage">Descripcion</string>
    <string name="btEditar">Editar</string>
    <string name="btBuscar">Iniciar Sesion</string>
    <string name="registrarse_iniciar_sesion">Registrarse</string>
    <string name="textview">Bienvenido</string>
    <string name="textview2"></string>
    <string name="title_activity_home_restaurante">HomeRestaurante</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="guardar_codigo">GUARDAR CODIGO</string>
    <string name="codigo_qr">CODIGO QR</string>

</resources>
