<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txtNombre"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme2"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageviewuv"
        android:layout_width="100dp"
        android:layout_height="140dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="561dp"
        android:background="@mipmap/univallelogo"
        android:contentDescription="@string/descripImage"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="300dp"
        android:autofillHints=""
        android:ems="10"
        android:backgroundTint="#cc0000"
        android:textColor="#000000"
        android:hint="@string/text2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:textColor="#000000"
        android:password="true"
        android:hint="@string/text3"
        android:backgroundTint="#cc0000"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/textinicio_sesion"
        android:hint="@string/registrarse_iniciar_sesion"
        android:textAlignment="center"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscar" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/buttonborderinici"
        android:hint="@string/btBuscar"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

</androidx.constraintlayout.widget.ConstraintLayout>